<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_convert"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="395dp"
        android:text="@string/button_conv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_info"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="25dp"
        android:text="@string/button_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_convert"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_convert" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_about"
        app:layout_constraintTop_toBottomOf="@+id/button_info" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="15dp"
        android:text="@string/app_ver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>