<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvertInfoActivity">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="95dp"
        android:text="@string/option_convert"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rc"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/option_rc"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_rf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/convert_info_back"
        android:layout_width="27dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rf"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="@string/option_rf"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_rc"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cr"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="51dp"
        android:text="@string/option_cr"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_cf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rc" />

    <Button
        android:id="@+id/button_cf"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="30dp"
        android:text="@string/option_cf"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rf" />

    <Button
        android:id="@+id/button_fr"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="233dp"
        android:text="@string/option_fr"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_fc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cr" />

    <Button
        android:id="@+id/button_fc"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="233dp"
        android:text="@string/option_fc"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_fr"
        app:layout_constraintTop_toBottomOf="@+id/button_cf" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/SplashBG">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="106dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="106dp"
                android:text="@string/option_info"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/option_fahrenheit"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/option_celcius"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:text="@string/option_reamur"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>