<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorSecondary">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="70dp"
        android:text="@string/button_info"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_hot"
        android:layout_width="125dp"
        android:layout_height="500dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="81dp"
        android:text="@string/temp_hot"
        android:theme="@style/Red"
        app:icon="@drawable/temperature_burn"
        app:iconGravity="textTop"
        app:iconSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_warm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_warm"
        android:layout_width="125dp"
        android:layout_height="500dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="81dp"
        android:text="@string/temp_warm"
        android:textColor="?attr/colorOnPrimary"
        android:theme="@style/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cold"
        app:layout_constraintStart_toEndOf="@+id/button_hot"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cold"
        android:layout_width="125dp"
        android:layout_height="500dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="81dp"
        android:text="@string/temp_cold"
        android:textColor="?attr/colorOnPrimary"
        android:theme="@style/Blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_warm"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>