<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_category"
        android:layout_width="378dp"
        android:layout_height="96dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/convert_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:text="@string/convert_clear"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="510dp" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:text="@string/convert_0"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="510dp" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:text="@string/convert_equal"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="510dp" />
</androidx.constraintlayout.widget.ConstraintLayout>